Alot of errors